tests/compile_failures/bad_setting_name_combinebits.rs
use splitbits::*;

fn main() {
    let a: u8 = 0b1010_0101;
    combinebits!(explode=panic, "aaaa aaaa");
}
